# tic-tac-toe

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  default.nix  tic-tac-toe.cpp
cmake/: tic-tac-toeConfig.cmake.in
conan/: conanfile.py.in
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
docker/: conanio.Dockerfile  nix.Dockerfile
include/tic-tac-toe/: tic-tac-toe.h
src/: CMakeLists.txt  main.cpp  tic-tac-toe.cpp  utility.h
test/: CMakeLists.txt  test.cpp
